# codex-ha-monitor

./: .gitignore  README.md  hacs.json  install.sh  pyproject.toml
.github/workflows/: ci.yml  release-agent.yml
agent/: LICENSE  README.md  go.mod  go.sum
agent/cmd/cma/: main.go
agent/internal/appserver/: client.go  client_test.go
agent/internal/collector/: filesystem.go  filesystem_test.go
agent/internal/discovery/: mdns.go  mdns_test.go
agent/internal/hookrelay/: relay.go  relay_test.go
agent/internal/httpapi/: hooks_test.go  server.go
agent/internal/identity/: identity.go
agent/internal/model/: model.go  model_test.go
agent/internal/monitor/: control.go  events.go  events_test.go  hooks.go  hooks_test.go  monitor.go  version_test.go
blueprints/automation/: codex_monitor_attention.yaml
custom_components/codex_monitor/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  event.py  manifest.json  models.py  sensor.py  services.yaml  strings.json  util.py
custom_components/codex_monitor/translations/: en.json  zh-Hans.json
docs/: agent-integration-contract.md  agent-openapi.yaml  agent-spec-v1.2.zh-CN.md  ha-integration-architecture.md
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_ha_setup.py  test_metadata.py  test_models.py  test_util.py
